# Photoshare

./: .coverage  .env  .example.env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
migrations/: env.py
migrations/versions/: 0d15525fa80c_init.py  39980385cabe_init.py  3d401fcfcbb2_init.py  5a557586bb7a_add_qr.py  77a8d1025a59_init.py  a84236409f10_fix_users.py  e9d4f7e86704_add_item_tag_rel.py  eb3eb6dff0b9_init.py
src/: edit_image_schemas.py  schemas.py
src/conf/: config.py
src/config/: config.py  detail.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  pictures.py  users.py
src/routes/: auth.py  comments.py  pictures.py  users.py
src/schemas/: comments.py  pictures.py  users.py
src/services/: auth.py  cloud_image.py  email.py  roles.py
tests/: conftest.py  test.db  test_db.py  test_main.py  test_main_healthchecker.py  test_repository_comments.py  test_route_comments.py  test_unit_reposirtory_pictures.py  test_unit_repository_users.py  test_unit_routes_auth.py  test_unit_routes_pictures.py  test_unit_routes_users.py
tests/comments/: test_repository_comments.py  test_route_comments.py
