[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["VOliinyk1 <vov.25.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
redis = "^4.5.5"
fastapi-limiter = "^0.1.5"

passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.2.8"
python-multipart = "^0.0.6"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.13"
cloudinary = "^1.33.0"
uuid = "^1.30"
httpx = "^0.24.1"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
qrcode = "^7.4.2"
slowapi = "^0.1.8"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
